[gd_scene load_steps=16 format=3 uid="uid://ihvc1sbpvo6q"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_ww3em"]
[ext_resource type="PackedScene" uid="uid://5ii0pieomnpv" path="res://assets/Entities/Player/Projectiles/projectile.tscn" id="2_5t3b8"]
[ext_resource type="Texture2D" uid="uid://dmx04f7fx4qpt" path="res://assets/Entities/Player/character_spriteshet.png" id="2_kvy2l"]
[ext_resource type="PackedScene" uid="uid://w2vqxv1dfjdx" path="res://assets/Environment/Common Environment/UI.tscn" id="3_w712q"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lagd1"]
radius = 7.0
height = 26.0

[sub_resource type="Animation" id="Animation_cav72"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 2)]
}

[sub_resource type="Animation" id="Animation_sm2vb"]
resource_name = "climb"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3)]
}

[sub_resource type="Animation" id="Animation_py3jn"]
resource_name = "damaged"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.325, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 5), Vector2i(1, 5), Vector2i(2, 5), Vector2i(3, 5)]
}

[sub_resource type="Animation" id="Animation_uo5fs"]
resource_name = "fall"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(6, 4)]
}

[sub_resource type="Animation" id="Animation_y33c4"]
resource_name = "idle"
length = 0.85
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_vtph5"]
resource_name = "jump"
length = 0.85
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.175, 0.35, 0.5, 0.65, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4), Vector2i(4, 4), Vector2i(5, 4)]
}

[sub_resource type="Animation" id="Animation_rg4e8"]
resource_name = "run"
length = 0.65
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.225, 0.325, 0.45, 0.55),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2)]
}

[sub_resource type="Animation" id="Animation_c3xo3"]
resource_name = "walk"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f1jwu"]
_data = {
"RESET": SubResource("Animation_cav72"),
"climb": SubResource("Animation_sm2vb"),
"damaged": SubResource("Animation_py3jn"),
"fall": SubResource("Animation_uo5fs"),
"idle": SubResource("Animation_y33c4"),
"jump": SubResource("Animation_vtph5"),
"run": SubResource("Animation_rg4e8"),
"walk": SubResource("Animation_c3xo3")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_utjnt"]
size = Vector2(5, 26)

[node name="Player" type="CharacterBody2D"]
z_index = 21
collision_mask = 54
script = ExtResource("1_ww3em")
jump_force = 1.5
projectile = ExtResource("2_5t3b8")

[node name="UI" parent="." instance=ExtResource("3_w712q")]

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_kvy2l")
hframes = 8
vframes = 8
frame = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 3)
shape = SubResource("CapsuleShape2D_lagd1")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1, 1)
limit_left = 0
limit_top = 0
limit_right = 2000
limit_bottom = 187

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_f1jwu")
}

[node name="LadderChecker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="LadderChecker"]
position = Vector2(2, 3)
shape = SubResource("RectangleShape2D_utjnt")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="LadderChecker" to="." method="_on_ladder_checker_body_entered"]
[connection signal="body_exited" from="LadderChecker" to="." method="_on_ladder_checker_body_exited"]
